--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
    <div class="container">
       <div class="tenor-gif-embed" data-postid="2847681155926237373" data-share-method="host" data-aspect-ratio="1" data-width="100%"><a href="https://tenor.com/view/appeal-ask-beg-beg-you-begging-gif-2847681155926237373">Appeal Ask Sticker</a>from <a href="https://tenor.com/search/appeal-stickers">Appeal Stickers</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
-      <h1>Pwede ba tayong mag-SEX?</h1>
+      <h1>Pwede ba tayong LUMABAS?</h1>
       <p>choose loveeee!🥺</p>
    
    
@@ -19,4 +19,5 @@
    </div>
  </div>
 </body>
+
 </html>  
