--- a/no1.html
+++ b/no1.html
@@ -9,8 +9,8 @@
 <body>
    <div class="container">
       <div class="tenor-gif-embed" data-postid="14663526" data-share-method="host" data-aspect-ratio="2.42424" data-width="100%"><a href="https://tenor.com/view/dear-lord-baby-jesus-gif-14663526">Dear Lord GIF</a>from <a href="https://tenor.com/search/dear-gifs">Dear GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
-      <h1>Ulit mali ka ng pindot😒</h1>
-      <p>choose loveeee!!🥺</p>
+      <h1>AGAIN, YOU CHOOSE WRONG BUTTON😒</h1>
+      <p>choose again loveeee!!🥺</p>
    
    <div class="btn">
       <a href="yes.html">Yes</a>
@@ -18,4 +18,5 @@
    </div>
  </div>
 </body>
+
 </html>
