--- a/no2.html
+++ b/no2.html
@@ -9,8 +9,8 @@
 <body>
    <div class="container">
       <div class="tenor-gif-embed" data-postid="12367686388670433073" data-share-method="host" data-aspect-ratio="1.04184" data-width="100%"><a href="https://tenor.com/view/spongebob-squarepants-begging-pretty-please-beg-on-your-knees-pray-for-mercy-gif-12367686388670433073">Spongebob Squarepants Begging GIF</a>from <a href="https://tenor.com/search/spongebob+squarepants-gifs">Spongebob Squarepants GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
-      <h1>mali padinnnnn isa pa ulit😢</h1>
-      <p>choose loveeee!!!🥺</p>
+      <h1>WRONG AGAIN! ANOTHER ONE AGAIN😢</h1>
+      <p>choose better loveeee!!!🥺</p>
    
    <div class="btn">
       <a href="yes.html">Yes</a>
@@ -18,4 +18,5 @@
    </div>
  </div>
 </body>
+
 </html>
